# stocky-backend

./: .gitignore  README.md  dependencies.py  docker-compose.yml  dockerfile  main.py  mappings.py  market_hours.py  prices.py  pyproject.toml  requirements.txt  rss_feeds.py  scheduler.py  stocky_api.py  superbase.py
db/: __init__.py  aggregate_sentiment.py  connection.py  news.py  stock_ai_summary.py  stocks.py  user_follows.py  users.py
jobs/: __init__.py  aggregate_sentiment.py  refresh_news.py  refresh_stocks.py  update_ai_summary.py
routes/: auth.py  news.py  stocks.py  users.py
services/: __init__.py  ai_service.py  news_service.py  sentiment_service.py  stock_service.py
