[project]
name = "stocky-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MrAdamTweedie",email = "adamgtweedie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "pytz (>=2026.1.post1,<2027.0)",
    "openai (>=2.30.0,<3.0.0)",
    "yfinance (>=1.2.0,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
